2010-01-04 00:25-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSWindowDecorationView.[hm]: Addition of ivars to track
	if a toolbar or menu is present in the window decorations.  Modified
	code to set these to YES/NO.

2010-01-04 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSWindowDecorationView.m: When adding a toolbar take in account
	the possibly existing in-window menu.
	When removing the in-window menu take care of shifitng the toolbar view up.

2010-01-03 German Arias <german@xelalug.org>

	* Source/NSPrintPanel.m,
	* Source/NSPrintOperation.m,
	* Source/GSThemeInspector.m: Added missing internationalisation, now is
        completed (or so I hope).
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish
        (with this the translation to spanish is finished).

2010-01-03 Fred Kiefer <FredKiefer@gmx.de>

	* Resources/English.lproj/Localizable.strings: Regenerate this file.
	* Resources/German.lproj/Localizable.strings: Regnerate and add
	some translations.

2010-01-03 German Arias <german@xelalug.org>

	* Panels/Spanish.lproj/GSPageLayout.gorm/objects.gorm,
	* Panels/Spanish.lproj/GSPrintPanel.gorm/objects.gorm: Changed some strings.

2010-01-03 German Arias <german@xelalug.org>

	* Source/GSInfoPanel.m: Added missing internationalisation.
	* Source/GSThemePanel.m: Added missing internationalisation.
	* Source/NSHelpPanel.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish.

2010-01-03 German Arias <german@xelalug.org>

	* Source/NSPrintPanel.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish.

2010-01-03 German Arias <german@xelalug.org>

	* Source/NSPageLayout.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish.

2010-01-03 German Arias <german@xelalug.org>

	* Source/NSFontPanel.m: Added missing internationalisation.